@@ -16,21 +16,18 @@ get_header(); ?>
 		<?php lsx_content_before(); ?>
 
 		<main id="main" class="site-main">
-
-		<?php lsx_content_top(); ?>
-
-		<?php if ( have_posts() ) : ?>
 			
-			<?php 
+		<?php 
 			$layout = get_theme_mod('lsx_layout','2cr');
 			$layout = apply_filters( 'lsx_layout', $layout );
 			if('1c' === $layout && !is_post_type_archive('tribe_events')){
 				lsx_breadcrumbs();
 			}
-			?>
-			
-			<?php 
-			?>			
+		?>
+
+		<?php lsx_content_top(); ?>
+
+		<?php if ( have_posts() ) : ?>	
 
 			<?php /* Start the Loop */ ?>
 			<?php while ( have_posts() ) : the_post(); ?>
